# l402-server-example-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docs/: CI_CD.md
.github/workflows/: ci.yml  release.yml
scripts/: README.md  ci-check.sh  prepare-release.sh
scripts/ci/: check-redis.sh  ci-check.sh  prepare-release.sh
scripts/demo/: setup-local.sh  simulate-payment.sh  test-flow.sh
src/: lib.rs  main.rs
src/api/: auth.rs  handlers.rs  mod.rs  routes.rs
src/config/: mod.rs
src/models/: mod.rs
src/payments/: mod.rs
src/payments/coinbase/: mod.rs
src/payments/lightning/: mod.rs
src/payments/lnbits/: mod.rs
src/services/: block_service.rs  mod.rs  stock_service.rs
src/storage/: mod.rs
src/utils/: mod.rs
